редактирование фильмов и сеансов обновлено

--- a/.gitignore
+++ b/.gitignore
@@ -241,3 +241,5 @@ _Pvt_Extensions
 /KINOv2/KINOv2/obj/Debug/netcoreapp2.0/KINOv2.pdb
 /KINOv2/.vs/config/applicationhost.config
 /KINOv2/.vs/KINOv2/v15/Server/sqlite3/storage.ide
+/KINOv2/KINOv2/Properties/launchSettings.json
+/KINOv2/KINOv2/Properties/launchSettings.json
