--- a/.gitignore
+++ b/.gitignore
@@ -243,3 +243,4 @@ _Pvt_Extensions
 /KINOv2/.vs/KINOv2/v15/Server/sqlite3/storage.ide
 /KINOv2/KINOv2/Properties/launchSettings.json
 /KINOv2/KINOv2/Properties/launchSettings.json
+/KINOv2/.vs/KINOv2/v15/.suo
