--- a/KINOv2/KINOv2/KINOv2.csproj
+++ b/KINOv2/KINOv2/KINOv2.csproj
@@ -48,6 +48,6 @@
     <Folder Include="wwwroot\images\Profiles\" />
   </ItemGroup>
 
-  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JSONSchema="" /></VisualStudio></ProjectExtensions>
+  <ProjectExtensions><VisualStudio><UserProperties Properties_4launchSettings_1json__JSONSchema="" appsettings_1json__JSONSchema="" /></VisualStudio></ProjectExtensions>
 
 </Project>
