--- a/KINOv2/KINOv2/appsettings.json
+++ b/KINOv2/KINOv2/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=KINOv2;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=C:\\Users\\Дмитрий\\Desktop\\KINOv2\\KINOv2\\KINOv2\\Data\\aspnet-KINOv2-D7872117-E92A-45CA-9B5B-A0E372B17F04.mdf;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "IncludeScopes": false,
