--- a/KINOv2/KINOv2/appsettings.json
+++ b/KINOv2/KINOv2/appsettings.json
@@ -1,6 +1,7 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=C:\\Users\\Дмитрий\\Desktop\\KINOv2\\KINOv2\\KINOv2\\Data\\aspnet-KINOv2-D7872117-E92A-45CA-9B5B-A0E372B17F04.mdf;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=tcp:kinov2testv220180506065501dbserver.database.windows.net,1433;Initial Catalog=KINOv2TESTv22;Persist Security Info=False;User ID=master;Password=~Qwerty123mas;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+
   },
   "Logging": {
     "IncludeScopes": false,
