--- a/KINOv2/KINOv2/appsettings.json
+++ b/KINOv2/KINOv2/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:kinov2testv220180506065501dbserver.database.windows.net,1433;Initial Catalog=KINOv2TESTv22;Persist Security Info=False;User ID=master;Password=~Qwerty123mas;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": "Server=tcp:kinov2dbserver.database.windows.net,1433;Initial Catalog=KINOV2DB;Persist Security Info=False;User ID=master;Password=~Qwerty123mas;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
 
   },
   "Logging": {
