Обновлен профиль, включены избранные фильмы в профиле, подключена авторизация через гугл

--- a/KINOv2/KINOv2/appsettings.json
+++ b/KINOv2/KINOv2/appsettings.json
@@ -8,5 +8,11 @@
     "LogLevel": {
       "Default": "Warning"
     }
+  },
+  "Authentication": {
+    "Google": {
+      "ClientId": "963777331693-488nqbtm7mg68er49l5pd896bp856tab.apps.googleusercontent.com",
+      "ClientSecret": "KsA4jwerPbTSwi6DfVDDtmvZ"
+    }
   }
 }
