update 22.07.2018: - включен верхний слайдер на главной - обновлена страница сеансов - список фильмов вынесен в частичное представление

--- a/KINOv2/KINOv2/KINOv2.csproj
+++ b/KINOv2/KINOv2/KINOv2.csproj
@@ -41,7 +41,7 @@
 
   <ItemGroup>
     <Folder Include="Properties\PublishProfiles\" />
-    <Folder Include="Views\Shared\Partials\" />
+    <Folder Include="wwwroot\images\Posters\MainSliders\" />
     <Folder Include="wwwroot\images\Profiles\" />
   </ItemGroup>
 
